# 2022_2_young_devs

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  conf.txt  config.h.in  desc.md  description.md  ex_ws.cpp  main.cpp  miltithreading.md  test  test.txt  Презентация1.pptx
.github/workflow/: ci.yml
.github/workflows/: main.yml
Game/: Game.cpp  Game.h
GameField/: GameField.cpp  GameField.h
GameWidget/: GameWidget.cpp  GameWidget.h
Player/: Player.cpp  Player.h
PlayersPanel/: PlayersPanel.cpp  PlayersPanel.h
RulesWidget/: RulesWidget.cpp  RulesWidget.h
ScoresWidget/: ScoresWidget.cpp  ScoresWidget.h
client/: CMakeLists.txt  async.http.client.cpp
db_lib/: CMakeLists.txt
db_lib/include/: DataBase.h  Game.h  GameInf.h  GameProgress.h  MySQL_DB.h  Tables.h  User.h
db_lib/src/: DataBase.cpp  Game.cpp  GameInf.cpp  GameProgress.cpp  MySQL_DB.cpp  User.cpp
fib_lib/: CMakeLists.txt
fib_lib/src/: fib.cpp
game_lib/: CMakeLists.txt
game_lib/include/: bot.h  compressor.h  cond_var.h  game_field.h  game_logic.h  game_loop.h  game_output.h  game_player.h  game_progress.h  game_room.h  helpers_func.h  input_output.h  reports_bug.h  room_builder.h  round_storage.h  tasks.h
game_lib/src/: bot.cpp  compressor.cpp  game_field.cpp  game_logic.cpp  game_loop.cpp  game_output.cpp  game_player.cpp  game_progress.cpp  game_room.cpp  helpers_func.cpp  input_output.cpp  room_builder.cpp  tasks.cpp
input_output_data/: 2_user_vs_user_in_0.txt  2_user_vs_user_in_1.txt  3_bot_vs_bot_out.txt  5_user_vs_user_no_logic_out.txt
input_output_test/: 1_user_vs_bot_out.txt  2_user_vs_user_out.txt  4_0_user_vs_bot_pause_rollback_in.txt  4_1_user_vs_bot_pause_rollback_in.txt  4_1_user_vs_bot_pause_rollback_out.txt  5_user_vs_user_no_logic_out.txt
input_output_test/correct_answers/: 4_0_user_vs_bot_pause_rollback_out.txt
linters/: run.sh
server/: CMakeLists.txt  async.http.server.cpp  connection.cpp  connection.h  router.h
server_2/: async.http.server.cpp  connection.cpp  router.h
tests/: CMakeLists.txt  Makefile  consistent.cpp  not_implemented.cpp  shared_func.h  stress_test.cpp  test_fib.cpp  test_game.cpp  test_thread_pool.cpp  tests.cpp  threadsave_queue.h
tests/test_files/: results copy 2.out  results copy.out  results.out  test2.out  test_case_1.test  test_case_2.test  test_case_3.test  test_case_4.test  test_case_my.test
tests/test_files/final_reports/: 1_thread_pool_rooms_2_sync.out  3_thread_pool_rooms_15_sync.out  4_thread_pool_rooms_100_no_sync.out  4_thread_pool_rooms_15_no_sync.out  consistent_test_1000_rooms.out  consistent_test_100_rooms.out  consistent_test_15_rooms.out  stress_test_1000_rooms.out  stress_test_100_rooms.out  stress_test_15_rooms.out  stress_test_1_1000_rooms.out  stress_test_1_100_rooms.out  stress_test_1_15_rooms.out  thread_pool_1000_rooms_no_sync.out  thread_pool_100_rooms_no_sync.out
tests/test_files/full_reports/thread_pool_out_many_rooms_no_sync/: test_room_10.out  test_room_11.out  test_room_12.out  test_room_13.out  test_room_14.out  test_room_2.out  test_room_3.out  test_room_4.out  test_room_5.out  test_room_6.out  test_room_7.out  test_room_8.out  test_room_9.out
tests/test_files/full_reports/thread_pool_out_many_rooms_sync/: test_room_10.out  test_room_11.out  test_room_12.out  test_room_13.out  test_room_14.out  test_room_2.out  test_room_3.out  test_room_4.out  test_room_5.out  test_room_6.out  test_room_7.out  test_room_8.out  test_room_9.out
tests/test_files/full_reports/thread_pool_out_no_sync/: test_room_0.out  test_room_1.out
tests/test_files/full_reports/thread_pool_out_sync/: test_room_0.out  test_room_1.out
